progress on QR decomposition page

--- a/03_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Orthogonality/053-orthogonal_matrices.ipynb
@@ -47,7 +47,7 @@
    "source": [
     "# Orthogonal Matrices\n",
     "\n",
-    "Rotations and reflections play key roltes in geomtry, physics, robotics, quantum mechanics, airplans, compute graphics, data science, and more. These transformations are encoded via *orthogonal matrices*, that is matirces whose columns form an orthonormal basis for $\\mathbb{R}^n$. They also play a centrla role in one of the most important methods of linear algebra, the *QR decomposition*.\n",
+    "Rotations and reflections play key roles in geometry, physics, robotics, quantum mechanics, airplans, compute graphics, data science, and more. These transformations are encoded via *orthogonal matrices*, that is matirces whose columns form an orthonormal basis for $\\mathbb{R}^n$. They also play a central role in one of the most important methods of linear algebra, the *QR decomposition*.\n",
     "\n",
     "We start with a definition.\n",
     "\n",
@@ -159,7 +159,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The QR Factorization"
+    "# The QR Factorization\n",
+    "\n",
+    "The GSP, when applied to orthonormalize a basis of $\\mathbb{R}^n$, in fact gives us the famous, incredibly useful *QR factorization* of a matrix:\n",
+    "\n",
+    ":::{prf:definition} The QR Factorization of a Square Matrix\n",
+    ":label: square-qr-factorization-defn\n",
+    "\n",
+    "Any real square matrix $A$ may be written in the form\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A = QR,\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $Q$ is [orthogonal](#orthogonal-defn) and $R$ is upper triangular. This is known as a *QR* factorization of $A$.\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "Let us start with a basis $\\vv{b_1}, ..., \\vv{b_n}$ for $\\mathbb{R}^n$, and let $\\vv{u_1}, ..., \\vv{u_n}$ be the result of applying the GSP to it. Define the matrices:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A = \\bm \\vv{b_1} & \\vv{b_2} & ... & \\vv{b_n} \\em, \\quad Q = \\bm \\vv{u_1} & \\vv{u_2} & ... & \\vv{u_n} \\em.\n",
+    "\\end{align*}\n",
+    "\n",
+    "$Q$ is an [orthogonal matrix](#orthogonal-matrix-defn) because the $\\vv{u_i}$ form an orthonormal basis.\n",
+    "\n",
+    "Now, let's revisit the GSP equations:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{v_1} &= \\vv{b_1} \\\\\n",
+    "    \\vv{v_2} &= \\vv{b_2} - \\frac{\\langle \\vv{b_2}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1} \\rangle}\\vv{v_1}\\\\\n",
+    "    \\vv{v_3} &= \\vv{b_3} - \\frac{\\langle \\vv{b_3}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1} \\rangle}\\vv{v_1} - \\frac{\\langle \\vv{b_3}, \\vv{v_2} \\rangle}{\\langle \\vv{v_2}, \\vv{v_2} \\rangle}\\vv{v_2}\\\\\n",
+    "    \\vdots\\\\\n",
+    "    \\vv{v_n} &= \\vv{b_n} - \\frac{\\langle \\vv{b_n}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1} \\rangle}\\vv{v_1} - ... - \\frac{\\langle \\vv{b_n}, \\vv{v_{n-1}} \\rangle}{\\langle \\vv{v_{n-1}}, \\vv{v_{n-1}} \\rangle}\\vv{v_{n-1}}\\\\\n",
+    "\\end{align*}\n",
+    "\n",
+    "We start by replacing each element $\\vv{v_i}$ with its normalized form, $\\vv{u_i} = \\frac{\\vv{v_i}}{\\| \\vv{v_i} \\|}$. Rearranging the above, we can write the original basis elements $\\vv{b_i}$ in terms of the orthonormal basis $\\vv{u_i}$ via the triangular system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{b_1} &= r_{11}\\vv{u_1}\\\\\n",
+    "    \\vv{b_2} &= r_{12}\\vv{u_1} + r_{22}\\vv{u_2}\\\\\n",
+    "    \\vv{b_3} &= r_{13}\\vv{u_1} + r_{23}\\vv{u_2} = r_{33}\\vv{u_3}\\\\\n",
+    "    \\vdots\\\\\n",
+    "    \\vv{b_n} &= r_{1n}\\vv{u_1} + r_{2n}\\vv{u_2} + ... + r_{nn}\\vv{u_n}\n",
+    "\\end{align*}"
    ]
   }
  ],
