--- a/03_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Orthogonality/053-orthogonal_matrices.ipynb
@@ -163,16 +163,16 @@
     "\n",
     "The GSP, when applied to orthonormalize a basis of $\\mathbb{R}^n$, in fact gives us the famous, incredibly useful *QR factorization* of a matrix:\n",
     "\n",
-    ":::{prf:definition} The QR Factorization of a Square Matrix\n",
+    ":::{prf:definition} The QR Factorization of an Invertible Square Matrix\n",
     ":label: square-qr-factorization-defn\n",
     "\n",
-    "Any real square matrix $A$ may be written in the form\n",
+    "Any real inveritble square matrix $A$ may be written in the form\n",
     "\n",
     "\\begin{align*}\n",
     "    A = QR,\n",
     "\\end{align*}\n",
     "\n",
-    "where $Q$ is [orthogonal](#orthogonal-defn) and $R$ is upper triangular. This is known as a *QR* factorization of $A$.\n",
+    "where $Q$ is [orthogonal](#orthogonal-defn) and $R$ is upper triangular and invertible. This is known as a *QR* factorization of $A$.\n",
     "\n",
     ":::\n",
     "\n",
@@ -196,13 +196,75 @@
     "\n",
     "We start by replacing each element $\\vv{v_i}$ with its normalized form, $\\vv{u_i} = \\frac{\\vv{v_i}}{\\| \\vv{v_i} \\|}$. Rearranging the above, we can write the original basis elements $\\vv{b_i}$ in terms of the orthonormal basis $\\vv{u_i}$ via the triangular system\n",
     "\n",
-    "\\begin{align*}\n",
+    "\\begin{align*}\\label{expr:gram-schmidt-system}\n",
     "    \\vv{b_1} &= r_{11}\\vv{u_1}\\\\\n",
     "    \\vv{b_2} &= r_{12}\\vv{u_1} + r_{22}\\vv{u_2}\\\\\n",
     "    \\vv{b_3} &= r_{13}\\vv{u_1} + r_{23}\\vv{u_2} = r_{33}\\vv{u_3}\\\\\n",
     "    \\vdots\\\\\n",
     "    \\vv{b_n} &= r_{1n}\\vv{u_1} + r_{2n}\\vv{u_2} + ... + r_{nn}\\vv{u_n}\n",
-    "\\end{align*}"
+    "\\end{align*}\n",
+    "\n",
+    "Using our usual trick of taking inner products with both sides we see that\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\langle \\vv{b_j}, \\vv{u_i}\\rangle &= \\langle r_{1j}\\vv{u_1} + ... + r_{jj}\\vv{u_j}, \\vv{u_i}\\rangle \\\\\n",
+    "    &= r_{1j} \\langle \\vv{u_1}, \\vv{u_i} \\rangle + ... + r_{ij} \\langle \\vv{u_i}, \\vv{u_i} \\rangle + ... + r_{jj} \\langle \\vv{u_i}, \\vv{u_j} \\rangle \\\\\n",
+    "    &= r_{ij}\n",
+    "\\end{align*}\n",
+    "\n",
+    "So we conclude that $r_{ij} = \\langle \\vv{b_j}, \\vv{u_i} \\rangle$.\n",
+    "\n",
+    "Now, returning to [](#expr:gram-schmidt-system), we observe that if we define the upper triangular matrix\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    R = \\bm\n",
+    "        r_{11} & r_{12} & \\dots & r_{1n}\\\\\n",
+    "        0 & r_{22} & \\dots & r_{2n}\\\\\n",
+    "        \\vdots & \\vdots & \\ddots & \\vdots\\\\\n",
+    "        0 & 0 & \\dots & r_{nn}\n",
+    "    \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "we can write $A = QR$. Since the GSP works on any basis, the only requirement for $A$ to have a QR factorization is that its columns form a basis for $\\mathbb{R}^n$, i.e., that $A$ be nonsingular.\n",
+    "\n",
+    "We can condense this process into an algorithm, for which we give pseudocode below. Note that this algorithm assumes that the underlying inner product is the dot prodcut, but it can easily be adapted to any inner product.\n",
+    "\n",
+    ":::{prf:algorithm} QR Decomposition \n",
+    ":label: qr-alg\n",
+    "\n",
+    "**Inputs** An invertible $n \\times n$ matrix $A$ (with entries $a_{ij}$) \n",
+    "\n",
+    "**Output** Invertible $n \\times n$ matrices $Q$ (with entries $q_{ij}$) and $R$ (with entries $r_{ij}$) such that $A = QR$, and $Q$ is orthogonal, and $R$ is upper triangular\n",
+    "\n",
+    "$Q \\gets $ empty $n \\times n$ matrix\\\n",
+    "$R \\gets $ empty $n \\times n$ matrix\\\n",
+    "for $j=1$ to $n$:\\\n",
+    "$\\quad$ $r_{jj} \\gets \\sqrt{a_{1j}^2 + \\dots + a_{nj}^2}$\\\n",
+    "$\\quad$ if $r_{jj} = 0$, **stop**; **print** \"A has linearly dependent columns\"\\\n",
+    "$\\quad$ $\\quad$ **else for** $i = 1$ to $n$\\\n",
+    "$\\quad$ $\\quad$ $\\quad$ $a_{ij} \\gets a_{ij} / r_{jj}$\\\n",
+    "$\\quad$ **for** $k = j + 1$ to $n$\\\n",
+    "$\\quad$ $\\quad$ $r_{jk} \\gets a_{1j}a_{1k} + \\dots + a_{nj}a_{nk}$\\\n",
+    "$\\quad$ $\\quad$ for $i = 1$ to $n$\\\n",
+    "$\\quad$ $\\quad$ $\\quad$ $a_{ik} \\gets a_{ik} - a_{ij}r_{jk}$\\\n",
+    "**return** $Q$, $R$\n",
+    ":::\n",
+    "\n",
+    "At first glance, this algorithm might look a little different that the process we just outlined. However, it's really the same idea, just the order of subtracting off components is different. Instead of visiting each basis vector and subtracting off the components parallel to vectors before it (which we did in the [Gram-Schmidt process](#gram-schmidt-alg)), we visit each basis vector and subtract the components parallel to it from every vector after it.\n",
+    "\n",
+    "We also give an implementation in numpy below, and run it on some test cases:\n",
+    "\n",
+    "TODO\n",
+    "\n",
+    "Solving linear systems using a QR decomposition is easy. Observe that if our goal is to solve $A\\vv x = \\vv b$ and a QR decomposition is available we first notice that\n",
+    "\n",
+    "\\begin{align*}\n",
+    " QR \\vv x = \\vv b \\iff R \\vv x = Q^T \\vv b = \\vv{\\tilde b}\n",
+    "\\end{align*}\n",
+    "\n",
+    "since $Q^\\top Q = I$. Now, solving $R\\vv x = \\vv{\\tilde b}$ can be easily accomplished via backsubstituion since $R$ is an upper triangular matrix! \n",
+    "\n",
+    "TODO EXAMPLE"
    ]
   }
  ],
