fixed some typos, added subsections

--- a/03_Orthogonality/052-gram_schmidt.ipynb
+++ b/03_Orthogonality/052-gram_schmidt.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "The Gram-Schmidt process simply repeats [this process](#computing-orthogonal-basis-ex) over and over if there are more than two vectors, but the idea remains the same: at each step you subtract off the directions of the current vector that are parallel with previous ones.\n",
     "\n",
-    ":::{prf:algorithm} The Gram-Schmidt Process\n",
+    ":::{prf:definition} The Gram-Schmidt Process\n",
     ":label: gram-schmidt-alg\n",
     "\n",
     "Given a basis $\\{\\vv{x_1}, ..., \\vv{x_p}\\}$ for a nonzero subspace $W$ of $\\mathbb{R}^n$, define\n",
