--- a/03_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Orthogonality/053-orthogonal_matrices.ipynb
@@ -166,7 +166,7 @@
     ":::{prf:definition} The QR Factorization of an Invertible Square Matrix\n",
     ":label: square-qr-factorization-defn\n",
     "\n",
-    "Any real inveritble square matrix $A$ may be written in the form\n",
+    "Any real invertible square matrix $A$ may be written in the form\n",
     "\n",
     "\\begin{align*}\n",
     "    A = QR,\n",
@@ -225,7 +225,14 @@
     "    \\em\n",
     "\\end{align*}\n",
     "\n",
-    "we can write $A = QR$. Since the GSP works on any basis, the only requirement for $A$ to have a QR factorization is that its columns form a basis for $\\mathbb{R}^n$, i.e., that $A$ be nonsingular.\n",
+    "we can write $A = QR$. Since the GSP works on any basis, the only requirement for $A$ to have a QR factorization is that its columns form a basis for $\\mathbb{R}^n$, i.e., that $A$ be nonsingular."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pseudocode for the QR factorization algorithm\n",
     "\n",
     "We can condense this process into an algorithm, for which we give pseudocode below. Note that this algorithm assumes that the underlying inner product is the dot prodcut, but it can easily be adapted to any inner product.\n",
     "\n",
@@ -252,17 +259,26 @@
     "\n",
     "At first glance, this algorithm might look a little different that the process we just outlined. However, it's really the same idea, just the order of subtracting off components is different. Instead of visiting each basis vector and subtracting off the components parallel to vectors before it (which we did in the [Gram-Schmidt process](#gram-schmidt-alg)), we visit each basis vector and subtract the components parallel to it from every vector after it.\n",
     "\n",
+    "## A numpy implementation of the QR factorization algorithm\n",
+    "\n",
     "We also give an implementation in numpy below, and run it on some test cases:\n",
     "\n",
-    "TODO\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Solving linear systems with a QR factorization\n",
     "\n",
-    "Solving linear systems using a QR decomposition is easy. Observe that if our goal is to solve $A\\vv x = \\vv b$ and a QR decomposition is available we first notice that\n",
+    "Solving linear systems using a QR factorization is easy. Observe that if our goal is to solve $A\\vv x = \\vv b$ and a QR factorization is available we first notice that\n",
     "\n",
     "\\begin{align*}\n",
     " QR \\vv x = \\vv b \\iff R \\vv x = Q^T \\vv b = \\vv{\\tilde b}\n",
     "\\end{align*}\n",
     "\n",
-    "since $Q^\\top Q = I$. Now, solving $R\\vv x = \\vv{\\tilde b}$ can be easily accomplished via backsubstituion since $R$ is an upper triangular matrix! \n",
+    "since $Q^\\top Q = I$. Now, solving $R\\vv x = \\vv{\\tilde b}$ can be easily accomplished via backsubstitution since $R$ is an upper triangular matrix! \n",
     "\n",
     "TODO EXAMPLE"
    ]
