--- a/03_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Orthogonality/053-orthogonal_matrices.ipynb
@@ -243,17 +243,17 @@
     "\n",
     "**Output** Invertible $n \\times n$ matrices $Q$ (with entries $q_{ij}$) and $R$ (with entries $r_{ij}$) such that $A = QR$, and $Q$ is orthogonal, and $R$ is upper triangular\n",
     "\n",
-    "$Q \\gets $ empty $n \\times n$ matrix\\\n",
+    "$Q \\gets A$ \\\n",
     "$R \\gets $ empty $n \\times n$ matrix\\\n",
-    "for $j=1$ to $n$:\\\n",
-    "$\\quad$ $r_{jj} \\gets \\sqrt{a_{1j}^2 + \\dots + a_{nj}^2}$\\\n",
-    "$\\quad$ if $r_{jj} = 0$, **stop**; **print** \"A has linearly dependent columns\"\\\n",
+    "**for** $j=1$ to $n$:\\\n",
+    "$\\quad$ $r_{jj} \\gets \\sqrt{q_{1j}^2 + \\dots + q_{nj}^2}$\\\n",
+    "$\\quad$ **if** $r_{jj} = 0$, **stop**; **print** \"A has linearly dependent columns\"\\\n",
     "$\\quad$ $\\quad$ **else for** $i = 1$ to $n$\\\n",
-    "$\\quad$ $\\quad$ $\\quad$ $a_{ij} \\gets a_{ij} / r_{jj}$\\\n",
+    "$\\quad$ $\\quad$ $\\quad$ $q_{ij} \\gets q_{ij} / r_{jj}$\\\n",
     "$\\quad$ **for** $k = j + 1$ to $n$\\\n",
-    "$\\quad$ $\\quad$ $r_{jk} \\gets a_{1j}a_{1k} + \\dots + a_{nj}a_{nk}$\\\n",
-    "$\\quad$ $\\quad$ for $i = 1$ to $n$\\\n",
-    "$\\quad$ $\\quad$ $\\quad$ $a_{ik} \\gets a_{ik} - a_{ij}r_{jk}$\\\n",
+    "$\\quad$ $\\quad$ $r_{jk} \\gets q_{1j}q_{1k} + \\dots + q_{nj}q_{nk}$\\\n",
+    "$\\quad$ $\\quad$ **for** $i = 1$ to $n$\\\n",
+    "$\\quad$ $\\quad$ $\\quad$ $q_{ik} \\gets q_{ik} - q_{ij}r_{jk}$\\\n",
     "**return** $Q$, $R$\n",
     ":::\n",
     "\n",
@@ -261,9 +261,107 @@
     "\n",
     "## A numpy implementation of the QR factorization algorithm\n",
     "\n",
-    "We also give an implementation in numpy below, and run it on some test cases:\n",
+    "We also give an implementation in numpy below, and run it on some test cases:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test case with invertible matrix:\n",
+      "A:\n",
+      "[[ 2.  1.  3.]\n",
+      " [-1.  0.  1.]\n",
+      " [ 0.  2. -1.]]\n",
+      "Q:\n",
+      "[[ 0.89442719  0.09759001  0.43643578]\n",
+      " [-0.4472136   0.19518001  0.87287156]\n",
+      " [ 0.          0.97590007 -0.21821789]]\n",
+      "R:\n",
+      "[[ 2.23606798  0.89442719  2.23606798]\n",
+      " [ 0.          2.04939015 -0.48795004]\n",
+      " [ 0.          0.          2.40039679]]\n",
+      "QR:\n",
+      "[[ 2.  1.  3.]\n",
+      " [-1. -0.  1.]\n",
+      " [ 0.  2. -1.]]\n",
+      "(Q^T)Q:\n",
+      "[[ 1.  0. -0.]\n",
+      " [ 0.  1. -0.]\n",
+      " [-0. -0.  1.]]\n",
+      "\n",
+      "Test case with noninvertible matrix:\n",
+      "A:\n",
+      "[[ 2.  1.  3.]\n",
+      " [-1.  0.  1.]\n",
+      " [ 1.  1.  4.]]\n",
+      "A has linearly dependent columns\n",
+      "Q:\n",
+      "None\n",
+      "R:\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
     "\n",
-    "TODO"
+    "def qr_factorization(A):                       \n",
+    "    if (A.shape[0] != A.shape[1]):\n",
+    "        print('A is not square')\n",
+    "        return None, None\n",
+    "\n",
+    "    n = A.shape[0]                              \n",
+    "    Q = A.copy()                       \n",
+    "    R = np.zeros((n, n))\n",
+    "\n",
+    "    for j in range(n):\n",
+    "        R[j, j] = np.linalg.norm(Q[:, j])       \n",
+    "        if R[j, j] < 1e-8:\n",
+    "            print('A has linearly dependent columns')\n",
+    "            return None, None\n",
+    "        else:\n",
+    "            for i in range(n):\n",
+    "                Q[i, j] = Q[i, j] / R[j, j]\n",
+    "        for k in range(j + 1, n):\n",
+    "            R[j, k] = np.dot(Q[:, j], Q[:, k])\n",
+    "            for i in range(n):\n",
+    "                Q[i, k] = Q[i, k] - Q[i, j] * R[j, k]\n",
+    "\n",
+    "    return Q, R\n",
+    "\n",
+    "print('Test case with invertible matrix:')\n",
+    "\n",
+    "A = np.array([[2.0, 1.0, 3.0], [-1.0, 0.0, 1.0], [0.0, 2.0, -1.0]])\n",
+    "print('A:')\n",
+    "print(A)\n",
+    "print('Q:')\n",
+    "\n",
+    "Q, R = qr_factorization(A)\n",
+    "print(Q)\n",
+    "print('R:')\n",
+    "print(R)\n",
+    "print('QR:')\n",
+    "print(np.round(Q @ R, 2))\n",
+    "print('(Q^T)Q:')\n",
+    "print(np.round(Q.T @ Q, 2))\n",
+    "\n",
+    "print('\\nTest case with noninvertible matrix:')\n",
+    "\n",
+    "A = np.array([[2.0, 1.0, 3.0], [-1.0, 0.0, 1.0], [1.0, 1.0, 4.0]])\n",
+    "print('A:')\n",
+    "print(A)\n",
+    "\n",
+    "Q, R = qr_factorization(A)\n",
+    "print('Q:')\n",
+    "print(Q)\n",
+    "print('R:')\n",
+    "print(R)"
    ]
   },
   {
@@ -300,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
