qr worked exercise

--- a/03_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Orthogonality/053-orthogonal_matrices.ipynb
@@ -378,7 +378,79 @@
     "\n",
     "since $Q^\\top Q = I$. Now, solving $R\\vv x = \\vv{\\tilde b}$ can be easily accomplished via backsubstitution since $R$ is an upper triangular matrix! \n",
     "\n",
-    "TODO EXAMPLE"
+    "````{exercise}  Solving a linear system via QR factorization\n",
+    ":label: orthogonal-matrices-ex2\n",
+    "\n",
+    "TODO\n",
+    "\n",
+    "Using a [QR factorization](#square-qr-factorization-defn), factor the matrix\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A = \\bm 1 & 3 \\\\ 2 & 1\\em \n",
+    "\\end{align*}\n",
+    "\n",
+    "as $A = QR$. Then, use the QR factorization of $A$ to solve the linear system\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A \\vv x = \\bm 8 \\\\ 1 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "```{solution} orthogonal-matrices-ex2\n",
+    ":class: dropdown\n",
+    "\n",
+    "Denote the columns of $A$ as\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{a_1} = \\bm 1\\\\ 2\\em, \\quad \\vv{a_2} = \\bm 3 \\\\ 1 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "First, we apply the [Gram-Schmidt process](#gram-schmidt-alg) to find an orthogonal basis for $\\text{span}(\\vv{a_1}, \\vv{a_2})$ (the columnspace of $A$). We that one such orthogonal basis is given by\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{v_1} &= \\vv{a_1} = \\bm 1\\\\2 \\em\\\\\n",
+    "     \\vv{v_2} &= \\vv{a_2} - \\frac{\\langle \\vv{a_2}, \\vv{v_1} \\rangle}{\\langle \\vv{v_1}, \\vv{v_1} \\rangle}\\vv{v_1} = \\bm 2\\\\ -1 \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "And an orthonormal basis is given by \n",
+    "\n",
+    "\\begin{align*}\n",
+    "    \\vv{u_1} = \\bm \\frac{1}{\\sqrt 5}\\\\\\frac{2}{\\sqrt 5} \\em, \\quad\\vv{u_2} = \\bm \\frac{2}{\\sqrt 5}\\\\-\\frac{1}{\\sqrt 5} \\em\n",
+    "\\end{align*}\n",
+    "\n",
+    "So we have that our $Q$ matrix is given by\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    Q = \\boxed{\\bm \\frac{1}{\\sqrt 5} & \\frac{2}{\\sqrt 5} \\\\ \\frac{2}{\\sqrt 5} & -\\frac{1}{\\sqrt 5} \\em }\n",
+    "\\end{align*}\n",
+    "\n",
+    "Now we compute the $R$ matrix. Recall that\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    R = \\bm \\langle \\vv{u_1}, \\vv{a_1} \\rangle &\\langle \\vv{u_1}, \\vv{a_2} \\rangle \\\\ 0 &\\langle \\vv{u_2}, \\vv{a_2}\\rangle \\em \n",
+    "\\end{align*}\n",
+    "\n",
+    "Substituting in values for $\\vv{u_i}$ and $\\vv{b_j}$, we have that our $R$ matrix is given by\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    R = \\boxed{\\bm  \n",
+    "        \\sqrt 5 & \\sqrt 5 \\\\ 0 & \\sqrt 5\n",
+    "    \\em }\n",
+    "\\end{align*}\n",
+    "\n",
+    "You can check that $Q$ is orthogonal ($Q^\\top Q = I$), $R$ is invertible upper triangular, and $A = QR$.\n",
+    "\n",
+    "Next, we solve $A\\vv x = \\bm 8 \\\\ 1\\em$:\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A\\vv x = \\bm 8 \\\\ 1\\em &\\iff QR \\vv x = \\bm 8 \\\\ 1 \\em\\\\\n",
+    "    &\\iff \\underbrace{(Q^\\top Q)}_I R \\vv x = Q^\\top \\bm 8 \\\\ 1 \\em\\\\\n",
+    "    &\\iff \\bm \\sqrt 5 & \\sqrt 5 \\\\ 0 & \\sqrt 5\\em \\bm x_1 \\\\ x_2\\em = \\bm \\frac{1}{\\sqrt 5} & \\frac{2}{\\sqrt 5} \\\\ \\frac{2}{\\sqrt 5} & -\\frac{1}{\\sqrt 5} \\em\\bm 8\\\\ 1\\em = \\bm 2\\sqrt 5 \\\\ 3\\sqrt 5 \\em \n",
+    "\\end{align*}\n",
+    "\n",
+    "Solving this with backsubstitution, we find that $(x_1, x_2) = \\boxed{(-1, 3)}$.\n",
+    "\n",
+    "```\n",
+    "````"
    ]
   }
  ],
