modified:   02_Inner_Products_and_Norms/041-inner.ipynb 	modified:   02_Inner_Products_and_Norms/042-angle.ipynb 	modified:   02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb 	modified:   02_Inner_Products_and_Norms/044-clustering.ipynb 	modified:   03_Orthogonality/053-orthogonal_matrices.ipynb

--- a/02_Inner_Products_and_Norms/041-inner.ipynb
+++ b/02_Inner_Products_and_Norms/041-inner.ipynb
@@ -126,8 +126,39 @@
     "    \\bm 1\\\\ 2 \\\\ 3 \\em \\cdot \\bm 4 \\\\ 5\\\\ 6 \\em = 1(4) + 2(5) + 3(6) = \\boxed{32}\n",
     "\\end{align*}\n",
     "```\n",
-    "````\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "62c77b9d-58d3-40dc-bb46-d7c0493f7620",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dot product <v1, v2> is:  32\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dot product\n",
     "\n",
+    "import numpy as np\n",
+    "\n",
+    "v1 = np.array([1, 2, 3])\n",
+    "v2 = np.array([4, 5, 6])\n",
+    "dot_prod = np.dot(v1, v2)\n",
+    "print(\"Dot product <v1, v2> is: \", dot_prod)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af78703f-97f9-4a94-8171-253991529191",
+   "metadata": {},
+   "source": [
     "# Inner Products\n",
     "\n",
     "In this section, we introduce the generalization of the [dot product](#dot-product-defn): inner products. The definition of inner products takes the most fundamental properties of the dot product (which is only defined for vectors living in Euclidean space $\\mathbb{R}^n$), and abstracts it for more general vector spaces.\n",
@@ -250,9 +281,60 @@
     "\n",
     "This should remind your of how the Riemann integral for $h(t) = f(t)g(t)$ is defined. Indeed, if we let $\\tau \\to 0$, we recover the integral inner product defined above. Since our inner product $\\langle f, g\\rangle$ is an inner product for any $\\tau$, it shouldn't be too surprising that the integral inner product does too.\n",
     "\n",
-    ":::\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "840980dd-5205-44b9-9cef-cbefed87edcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The vectors are v1: \n",
+      " [[1]\n",
+      " [2]\n",
+      " [3]] \n",
+      " and v2: \n",
+      " [[4]\n",
+      " [5]\n",
+      " [6]]\n",
+      "Inner product <v1, v2> is: \n",
+      " [[ 4  5  6]\n",
+      " [ 8 10 12]\n",
+      " [12 15 18]]\n",
+      "Weighted inner product <v1, v2> is: \n",
+      " 112\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inner product\n",
     "\n",
-    "# Norms Induced by an Inner Product \n",
+    "import numpy as np\n",
+    "\n",
+    "v1_c = v1.reshape((-1,1)) # Notice the shape of the vectors\n",
+    "v2_c = v2.reshape((-1,1))\n",
+    "print(\"The vectors are v1: \\n\", v1_c, \"\\n and v2: \\n\", v2_c)\n",
+    "inner_prod = np.inner(v1_c, v2_c) # What happens if you use np.dot?  \n",
+    "print(\"Inner product <v1, v2> is: \\n\", inner_prod)\n",
+    "\n",
+    "# weighted inner product\n",
+    "\n",
+    "weights = np.array([2, 5, 3])\n",
+    "inner_weighted = np.inner(v1, weights*v2)\n",
+    "print(\"Weighted inner product <v1, v2> is: \\n\", inner_weighted)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0761d7-aa2f-45dc-a02f-97d7c5f75706",
+   "metadata": {},
+   "source": [
+    "## Norms Induced by an Inner Product \n",
     "\n",
     "Just as we learned how the dot product may be generalized to inner products, we will study how the Euclidean norm (which is induced by the dot product) can be generalized into *norms induced by inner products*. In a later section, we will take one step further in abstraction and introduce an even more general definition of a norm and normed vector space.\n",
     "\n",
@@ -292,6 +374,28 @@
     "which assigns more weight to the second coordinate relative to the first. Like with the weighted dot product, this idea behind this *weighted norm* easily generalizes to $\\mathbb{R}^n$.\n",
     "\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "4864e3fa-1c23-43ef-bfc2-2f4d3757138e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Norm of v1:  3.7416573867739413\n",
+      "Induced norm of v1:  3.7416573867739413\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Norms\n",
+    "\n",
+    "print(\"Norm of v1: \", np.linalg.norm(v1))\n",
+    "print(\"Induced norm of v1: \", np.sqrt(np.dot(v1, v1)))"
    ]
   }
  ],
