--- a/02_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Inner_Products_and_Norms/042-angle.ipynb
@@ -147,6 +147,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d8e19957-c9cc-4d67-9123-23869def2b6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Angle between v and w is:  0.5235987755982987  rad\n",
+      "Cosine similarity between v and w is:  0.8660254037844387\n"
+     ]
+    }
+   ],
+   "source": [
+    "# angle between vectors\n",
+    "import numpy as np\n",
+    "import scipy\n",
+    "\n",
+    "v = np.array([1, 1, 0])\n",
+    "w = np.array([2, 1, 1])\n",
+    "\n",
+    "cos_theta = np.dot(v, w)/(np.linalg.norm(v)*np.linalg.norm(w))\n",
+    "theta = np.arccos(cos_theta)\n",
+    "print(\"Angle between v and w is: \", theta, \" rad\")\n",
+    "\n",
+    "# cosine distance -> cosine similarity\n",
+    "from scipy.spatial import distance\n",
+    "\n",
+    "cosine_dist = distance.cosine(v, w)\n",
+    "cosine_sim = 1 - cosine_dist\n",
+    "print(\"Cosine similarity between v and w is: \", cosine_sim)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ced998c1-86cd-4be4-9c06-0f95a2dd9933",
    "metadata": {},
@@ -263,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "458c6b5f-949b-4ea8-a0c0-a7a42cf95ce5",
+   "id": "73fe6ca8-9f1f-4182-b6e6-57e054eb6d97",
    "metadata": {},
    "source": [
     "## Norms\n",
@@ -324,6 +359,33 @@
     "\n",
     "The hard part in showing $p-$_norm_ is a norm is verifying the triangle inequality ([axiom 3](#norm-defn)), which is also known as _Minkowski's inequality_.\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "a3df051f-e52c-479a-867e-9e838b649d83",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "1-norm:  3.0 \n",
+      "2-norm:  2.23606797749979 \n",
+      "infinity norm:  2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Different norms\n",
+    "\n",
+    "v = np.array([1, -2])\n",
+    "v1 = np.linalg.norm(v, ord=1)\n",
+    "v2 = np.linalg.norm(v)\n",
+    "vinf = np.linalg.norm(v, ord=np.inf)\n",
+    "print(\"\\n1-norm: \", v1, \"\\n2-norm: \", v2, \"\\ninfinity norm: \", vinf)"
    ]
   }
  ],
