--- a/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# The Euclidean Distance\n",
+    "## The Euclidean Distance\n",
     "\n",
     "A distance function, or metric, describes how far apart 2 points are.\n",
     "\n",
@@ -89,9 +89,37 @@
     "\\end{align*}\n",
     "\n",
     "```\n",
-    "````\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Eucledian distance:  2.8284271247461903\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Distance between vectors\n",
+    "import numpy as np\n",
     "\n",
-    "# General Distances\n",
+    "v1 = np.array([1, 2])\n",
+    "v2 = np.array([3, 4])\n",
+    "euc_dist = np.linalg.norm(v1 - v2)\n",
+    "print(\"Eucledian distance: \", euc_dist)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## General Distances\n",
     "\n",
     "In this course, we will only work with the Euclidean distance. However, given any vector space with a general norm (i.e., $\\mathbb{R}^n$ with the Euclidean norm), we may construct a distance function as the norm of their difference. This leads us to a more general notion of distances:\n",
     "\n",
@@ -182,12 +210,14 @@
     "    Note that if $P_{uv}$ is a walk of length $d(u, v)$ from $u$ to $v$, and $P_{vw}$ is a walk of length $d(v, w)$ from $v$ to $w$, then we can concatenate $P_{uv} \\to P_{vw}$ to get a walk starting from $u$ which ends at $w$ and has length $d(u, v) + d(v, w)$. Since the shortest walk from $u$ to $w$ can't be longer than this walk we just constructed, this implies that $d(u, w) \\leq d(u, v) + d(v, w)$, i.e., the triangular inequality holds.\n",
     "\n",
     "\n",
-    ":::\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Applications of Distances\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applications of Distances\n",
     "\n",
     ":::{prf:example} Feature distances\n",
     ":label:distance-feature_distance\n",
@@ -215,6 +245,13 @@
     ":align: center\n",
     ":::"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -233,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
