generalized qr factorization notes, will add more if i have more time

--- a/03_Orthogonality/053-orthogonal_matrices.ipynb
+++ b/03_Orthogonality/053-orthogonal_matrices.ipynb
@@ -5,10 +5,10 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: Orthogonal Matrices\n",
+    "title: Orthogonal Matrices and QR Factorization\n",
     "subject:  Orthogonality\n",
     "subtitle: \n",
-    "short_title: Orthogonal Matrices\n",
+    "short_title: Orthogonal Matrices and QR Factorization\n",
     "authors:\n",
     "  - name: Nikolai Matni\n",
     "    affiliations:\n",
@@ -16,7 +16,7 @@
     "      - University of Pennsylvania\n",
     "    email: nmatni@seas.upenn.edu\n",
     "license: CC-BY-4.0\n",
-    "keywords: Orthogonal Matrix, QR Decomposition\n",
+    "keywords: Orthogonal Matrix, QR Factorization\n",
     "math:\n",
     "  '\\vv': '\\mathbf{#1}'\n",
     "  '\\bm': '\\begin{bmatrix}'\n",
@@ -37,8 +37,8 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- What is an orthogonal matrix?\n",
-    "- What is the QR decomposition of a square matrix?\n",
-    "- How can we use the QR decomposition to solve systems of equatitons of the form $A\\vv{x} = \\vv b$, with $A$ square?"
+    "- What is the QR factorization of a square matrix?\n",
+    "- How can we use the QR factorization to solve systems of equatitons of the form $A\\vv{x} = \\vv b$, with $A$ square?"
    ]
   },
   {
@@ -47,7 +47,7 @@
    "source": [
     "# Orthogonal Matrices\n",
     "\n",
-    "Rotations and reflections play key roles in geometry, physics, robotics, quantum mechanics, airplans, compute graphics, data science, and more. These transformations are encoded via *orthogonal matrices*, that is matirces whose columns form an orthonormal basis for $\\mathbb{R}^n$. They also play a central role in one of the most important methods of linear algebra, the *QR decomposition*.\n",
+    "Rotations and reflections play key roles in geometry, physics, robotics, quantum mechanics, airplans, compute graphics, data science, and more. These transformations are encoded via *orthogonal matrices*, that is matirces whose columns form an orthonormal basis for $\\mathbb{R}^n$. They also play a central role in one of the most important methods of linear algebra, the *QR factorization*.\n",
     "\n",
     "We start with a definition.\n",
     "\n",
@@ -236,7 +236,7 @@
     "\n",
     "We can condense this process into an algorithm, for which we give pseudocode below. Note that this algorithm assumes that the underlying inner product is the dot prodcut, but it can easily be adapted to any inner product.\n",
     "\n",
-    ":::{prf:algorithm} QR Decomposition \n",
+    ":::{prf:algorithm} QR Factorization \n",
     ":label: qr-alg\n",
     "\n",
     "**Inputs** An invertible $n \\times n$ matrix $A$ (with entries $a_{ij}$) \n",
@@ -452,6 +452,32 @@
     "```\n",
     "````"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optional: Generalized QR factorizations\n",
+    "\n",
+    "In an [earlier section](#square-qr-factorization-defn), we stated that any real invertible square matrix $A$ had a QR decomposition $A = QR$, where $Q$ was orthogonal and $R$ is upper triangular and invertible.\n",
+    "\n",
+    "While this special case (where the $R$ matrix is invertible) is incredibly useful for solving systems of linear equations, it turns out that *every* $m\\times n$ matrix $A$ has a decomposition of the form $A = QR$, where $Q$ is and orthogonal $m\\times m$ matrix and $R$ is an upper triangular $m\\times n$ matrix. \n",
+    "\n",
+    ":::{prf:definition} The QR Factorization\n",
+    ":label: qr-factorization-defn\n",
+    "\n",
+    "Any real square matrix $A$ may be written in the form\n",
+    "\n",
+    "\\begin{align*}\n",
+    "    A = QR\n",
+    "\\end{align*}\n",
+    "\n",
+    "where $Q$ is [orthogonal](#orthogonal-defn) and $R$ is upper triangular.\n",
+    "\n",
+    "Furthermore, if $A$ is a real, invertible, square matrix then $R$ is invertible.\n",
+    "\n",
+    ":::"
+   ]
   }
  ],
  "metadata": {
@@ -470,7 +496,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.19"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
