Added translated words explicitly

--- a/02_Inner_Products_and_Norms/Case_Study_On_Transformers/047-transformer-case-study.ipynb
+++ b/02_Inner_Products_and_Norms/Case_Study_On_Transformers/047-transformer-case-study.ipynb
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "89469254-ab20-4190-a01c-f16e754dd21e",
    "metadata": {
     "tags": []
@@ -449,12 +449,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "47d64856-c65e-463d-a3c9-81578e06634e",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Screen:  [ 0.31098   -0.53336    0.9123    -0.15256    0.89117   -0.10692\n",
+      "  0.78658   -0.19013    0.93285    0.52754    0.31475    0.63839\n",
+      " -3.4433    -0.65918    0.055317   1.3083     0.4009     0.0071616\n",
+      " -0.27728    0.017544  -0.86985   -0.60072    1.3789     0.25096\n",
+      " -1.4383   ]\n",
+      "rock:  [ 0.021641 -0.54484   0.78102  -0.10052   0.10482   0.53319   1.0586\n",
+      "  0.90491   0.2594   -0.73547  -0.12972  -0.59679  -3.4979   -0.61679\n",
+      " -0.15259   0.072474 -0.45453  -0.14681   0.09392   0.32735  -0.68834\n",
+      " -0.020972  0.21344  -0.63178   1.3292  ]\n",
+      "Remote:  [ 0.1125    0.38049   0.40254   0.089511  0.58018   0.067418  0.41842\n",
+      " -0.46138   1.8756    0.99621   0.19743   0.27248  -2.7099   -0.65497\n",
+      "  0.54752   1.0199    0.58964   0.1559    0.93753  -0.28045  -0.8659\n",
+      " -0.88299   0.85855  -0.39055  -1.0604  ]\n"
+     ]
+    }
+   ],
    "source": [
     "screen = glove_vectors['screen']\n",
     "rock = glove_vectors['rock']\n",
@@ -479,36 +499,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7ab17641-8c27-4ebe-811f-3c6fdd66826c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5682209"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "screen@rock/(np.linalg.norm(screen)*np.linalg.norm(rock))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "47428b03-a649-4f7b-814d-8b44b729547d",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.4561119"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "remote@rock/(np.linalg.norm(remote)*np.linalg.norm(rock))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "c4dd8837-5a02-4203-9a08-4de2a2e52a4a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.86155677"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "screen@remote/(np.linalg.norm(screen)*np.linalg.norm(remote))"
    ]
@@ -523,12 +576,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "28702a77-df2e-47de-b436-f5597a0236d8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('keyboard', 0.9022769331932068),\n",
+       " ('monitor', 0.9000157713890076),\n",
+       " ('plug', 0.8990083932876587),\n",
+       " ('engine', 0.8985315561294556),\n",
+       " ('switch', 0.896084725856781),\n",
+       " ('device', 0.888617753982544),\n",
+       " ('charger', 0.8855589032173157),\n",
+       " ('counter', 0.8843674063682556),\n",
+       " ('automatic', 0.878197431564331),\n",
+       " ('sync', 0.877406656742096)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "glove_vectors.most_similar('remote')"
    ]
