modified:   00_Linear_Algebraic_Systems/020-linsys-intro.ipynb 	modified:   00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb 	modified:   00_Linear_Algebraic_Systems/022-linsys-matvec.ipynb 	modified:   00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb 	modified:   03_Orthogonality/053-orthogonal_matrices.ipynb

--- a/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb
+++ b/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb
@@ -25,8 +25,16 @@
     "license: CC-BY-4.0\n",
     "keywords: matrices, vectors, Gaussian Elimination, forward and back substitution, inverses, LU decomposition\n",
     "abstract: |\n",
-    "    Our goal is to get to the good stuff quickly, and so we assume you have already seen things like matrices, vectors, and Gaussian Elimination in Math 1410. Our goal in this chapter is to remind you of what these things are, what they're for, and how they can be automated and scaled out using computer code.  We'll see that with a little bit of work, we can already start asking really interesting questions, and solving some really interesting problems from science, engineering, and economics!|\n",
+    "    Our goal is to get to the good stuff quickly, and so we assume you have already seen things like matrices, vectors, and Gaussian Elimination in Math 1410. Our goal in this chapter is to remind you of what these things are, what they're for, and how they can be automated and scaled out using computer code.  We'll see that with a little bit of work, we can already start asking really interesting questions, and solving some really interesting problems from science, engineering, and economics!\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8072dab9-0207-46c6-8c6a-24f1b17bb82d",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb)\n"
    ]
   },
   {
@@ -106,6 +114,14 @@
     "```\n",
     "\n",
     "For example, [](#netflow) shows 30 units of flowing ino a node through one incoming edge, and two outgoing edges with flows $x_1$ and $x_2$.  For flow to be _conserved_ here, we must have that $x_1 + x_2 = 30$.  In a similar fashion, we can write down linear equations that balance the flow entering and leaving each node.  The problem of network analysis is to determine the flow in each branch when only partial information (such as flow into and out of the network) is known.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ee3c0fd-9db0-4fd2-b284-92f8077e97af",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/00_Linear_Algebraic_Systems/020-linsys-intro.ipynb)\n"
    ]
   }
  ],
