--- a/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
+++ b/00_Linear_Algebraic_Systems/021-linsys-gauss.ipynb
@@ -34,6 +34,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b6de1190-6bc6-455f-82b7-74e71f966935",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=021-linsys-gauss.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "efca8556-3e7f-4f1c-b466-04f0e14b12e5",
    "metadata": {},
    "source": [
@@ -292,6 +300,22 @@
     "```\n",
     "````"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa3b79fa-1ae3-4909-86eb-26c6d75ece06",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=021-linsys-gauss.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceacf782-bad9-4ba5-87b8-69de5077753d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
