--- a/00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
+++ b/00_Linear_Algebraic_Systems/023-linsys-gauss.ipynb
@@ -34,6 +34,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "697aea0b-2cea-4387-8ad4-220fe138867f",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=023-linsys-gauss.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "efca8556-3e7f-4f1c-b466-04f0e14b12e5",
    "metadata": {},
    "source": [
@@ -373,6 +381,22 @@
     "x_numpy = np.linalg.solve(A, b) \n",
     "x_numpy"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3dfc16e3-e4dc-4593-9678-c760e3adc17a",
+   "metadata": {},
+   "source": [
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=023-linsys-gauss.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35f6ccbe-b91f-4bd1-a838-58d11c87eb97",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
